# MultiLeap-Computer-Animation-Lab

./: .gitignore  CMakeLists.txt  README.md
include/: cursor_manips.h  funcs.h  pch.h  save_diveces_data_structure.h  typedefs.h  vecm.h
results/: fused_hand.json
src/: cursor_manips.cpp  funcs.cpp  fused_hand_visualizer.py  main.cpp  save_devices_data_structure.cpp  vecm.cpp
